# django-middleware-fileuploadvalidation

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  REQUIREMENTS.txt  _CLAMAV_INSTALL_GUIDE.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  release.yml
django_fileuploadvalidation/: File.py  __init__.py  config.py  middleware.py  settings.py
django_fileuploadvalidation/classes/: File.py
django_fileuploadvalidation/data/: all_mime_types.yml  filedetectiondata.py  filesanitizationdata.py  filesignatures.py  mimetypes.py  office_mimes.py  office_mimes.yml  whitelists.py
django_fileuploadvalidation/files/: BaseFile.py  File.py  ImageFile.py  PdfFile.py
django_fileuploadvalidation/modules/: converter.py  detector.py  evaluator.py  helper.py  reportbuilder.py  reporter.py  sanitizer.py
django_fileuploadvalidation/modules/converter/: basic_conversion.py  conversion.py  image_conversion.py
django_fileuploadvalidation/modules/detector/: application.py  basic.py  basic_detection.py  detector.py  general.py  image.py  image_detection.py  video.py
django_fileuploadvalidation/modules/reportbuilder/: basic_reportbuilding.py
django_fileuploadvalidation/modules/sanitization/: basic.py  sanitizer.py
django_middleware_fileuploadvalidation/: File.py  FileUploadHandler.py  __init__.py  decorators.py  middleware.py
django_middleware_fileuploadvalidation/modules/: converter.py  evaluator.py  reporter.py
docs/: _CLAMAV_INSTALL_GUIDE.md
(+23 files in other folders)
